# TestGenie.AI

./: .flake8  .gitignore  .requirements.txt  README.md  contribution.md  package.json  pyproject.toml
.github/: CODEOWNERS  auto_assign.yml
.github/workflows/: auto-assign.yml  code-review.yml  lint-codebase.yml  pr-title-validation.yml
.husky/: check-branch-name.js  commit-msg  pre-push
ai/: ai.md
ai_workflow/: adk.excalidraw
ai_workflow/agents/: README.md
ai_workflow/agents/deployment/: local.py  remote.py
ai_workflow/agents/singleAgent/deployment/: local.py  remote.py
app/: agent.py  agent_engine_app.py  config.py  tools.py
app/deployment/: remote.py
backend/: package.json  tsconfig.json
backend/src/: index.ts
frontend/: .gitignore  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/styles/: _variables.scss
frontend/src/theme/: palette.ts  typography.ts
nextjs/src/app/: layout.tsx
nextjs/src/components/: InputForm.tsx
nextjs/src/components/chat/: BackendHealthChecker.tsx  ChatHeader.tsx  ChatInput.tsx  EmptyState.tsx
nextjs/src/lib/handlers/: common.ts
